# predictive-content-generator

./: .env.template  .gitignore  .licenserc.yaml  CHANGELOG.md  Makefile  Pulumi.yaml  README.md  Taskfile.yaml  __main__.py  constraints.txt  cookiecutter.json  mypy.ini  prompts.yml  pyproject.toml  quickstart.py  requirements.txt  trivy-ignore.rego
assets/: nbo_training.csv
frontend/: app.py  (+4 more)
recipe-bob/: pyproject.toml  requirements.txt
recipe-bob/conf/: logging.yml
recipe-bob/conf/base/: catalog.yml  catalog_deploy_llm.yml  catalog_streamlit.yml  example-globals.yml  parameters_deploy_llm.yml
recipe-bob/conf/base/fraud_monitoring/: catalog_automl_classifier.yml  parameters_automl_classifier.yml  parameters_streamlit.yml
recipe-bob/conf/base/nbo/: catalog_automl_classifier.yml  parameters_automl_classifier.yml  parameters_streamlit.yml
recipe-bob/conf/base/underwriting/: catalog_automl_classifier.yml  parameters_automl_classifier.yml  parameters_streamlit.yml
recipe-bob/include/app/: app.py  custom_metrics.py  helpers.py  requirements.txt  style.css
recipe-bob/include/autopilot/: fraud_monitoring_training.csv  nbo_training.csv
recipe-bob/include/email_llm/: custom.py  local_helpers.py  model-metadata.yaml.jinja
recipe-bob/src/recipe_bob/: __main__.py  hooks.py  pipeline_registry.py  settings.py
recipe-bob/src/recipe_bob/pipelines/automl_classifier/: nodes.py  pipeline.py
recipe-bob/src/recipe_bob/pipelines/delete_assets/: nodes.py  pipeline.py
recipe-bob/tests/: conftest.py  test_custom_app.py  test_dr_deployment.py  test_llm_deployment.py
(+47 files in other folders)
